codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completed_turn_clears_visible_running_hook.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"before completion:\\n{before_completion}\\nafter completion:\\n{}\",\nhook_status_frame(&chat, 80))"
---
before completion:
"                                                                                "
"• Working (0s • esc to interrupt) · Running hook                                "
"                                                                                "
"                                                                                "
"› Ask Codez to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
after completion:
"                                                                                "
"                                                                                "
"› Ask Codez to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
